# correpy

./: .gitignore  .pylintrc  CODEOWNERS  README.md  pyproject.toml  read_file.py
.circleci/: config.yml
correpy/: utils.py
correpy/domain/: enums.py  exceptions.py
correpy/domain/entities/: brokerage_note.py  security.py  transaction.py
correpy/parsers/: exceptions.py  fitz_parser.py
correpy/parsers/brokerage_notes/: base_parser.py  brokerage_note_section.py  parser_factory.py  word_rectangle.py
correpy/parsers/brokerage_notes/b3_parser/: b3_parser.py  nuinvest.py
correpy/parsers/brokerage_notes/inter_parser/: inter.py
correpy/parsers/brokerage_notes/nuinvest_parser/: __init__.py  nuinvest.py
correpy/tests/: factories.py
correpy/tests/unit/domain/: test_brokerage_note.py
correpy/tests/unit/parsers/: test_fitz_parser.py
pipeline/: lint.sh  lint_local.sh
tests/: factories.py  test_utils.py
tests/integrations/parsers/: test_parser_factory.py
tests/integrations/parsers/brokerage_notes/: test_b3_parser.py
tests/unit/domain/: test_brokerage_note.py  test_security.py
tests/unit/parsers/: test_fitz_parser.py
