[tool.poetry]
name = "correpy"
version = "0.1.0"
description = "CorrePy (Corretagem Python) é uma lib responsável por parsear notas de corretagem no padrão B3 e retornar os dados no formato JSON."
authors = ["Thiago  Salvatore <thiago.salvatore@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.19.4"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"
factory-boy = "^3.2.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
