[tool.poetry]
name = "correpy"
version = "0.4.1"
description = "CorrePy (Corretagem Python) é uma lib responsável por parsear notas de corretagem no padrão B3 (Sinacor) e retornar os dados no formato JSON."
authors = ["Thiago  Salvatore <thiago.salvatore@gmail.com>"]
license = "Apache License 2.0"
keywords = ["corretagem", "parser", "b3", "nota de corretagem", "imposto de renda"]
readme = "README.md"
homepage = "https://github.com/thiagosalvatore/correpy"
repository = "https://github.com/thiagosalvatore/correpy"
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.23.9"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"
factory-boy = "^3.2.1"
pytest = "^6.2.5"
pylint = "^2.14.0"
mypy = "^0.960"
isort = "^5.10.1"
testfixtures = "^6.18.5"
coverage = "^6.4.1"
black = "^22.6.0"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.Python
    | \.git
    | \.hg
    | \.mypy_cache
    | \__pycache__
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.mypy]
python_version = "3.10"
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[[tool.mypy.overrides]]
module = [
    "factory.*",
    "fitz.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
multi_line_output = 3
line_length = 120
skip = "tests"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
